# pico-id

./: Cargo.toml  README.md  rp235x_riscv.x
.cargo/: config.toml
receiver/: Cargo.toml
src/: main.rs
transmitter/: Cargo.toml
transmitter/src/: main.rs
tx_uart/: Cargo.toml
tx_uart/src/: main.rs
